2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com> 

	* Makefile.am: Fixed rename.

2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com> 

	* MonoDevelop.Documentation/DocumentationService.cs: Renamed from
	MonoDevelop.Documentation/MonodocService.cs.

2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com> 

	* MonoDevelop.Documentation/MonodocService.cs:
	* Makefile.am:
	* MonoDevelop.Documentation.addin.xml:
	Use new DocumentationService.	

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Documentation.addin.xml: Fixed addin header
	information. Use "id" attribuet instead of "name" to identify addins.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Documentation/MonodocService.cs: Load the tree in the
	InitializeService method.
	* MonoDevelop.Documentation.addin.xml: Added addin dependencies.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Install the assembly in the AddIns directory.

2005-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	Created new assembly. Old ChangeLog entries can be found in the
	MonoDevelop.Ide ChangeLog.