@@ -1,7 +1,8 @@
 
-DLL = $(top_builddir)/build/AddIns/MonoDevelop.Documentation.dll
+ASSEMBLY = $(top_builddir)/build/AddIns/MonoDevelop.Documentation.dll
 
-REFERENCES = \
+REFS = \
+	-r:System.Xml \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Projects.dll \
 	$(MONODOC_LIBS)
@@ -12,7 +13,7 @@ MonoDevelop.Documentation/DocumentationService.cs
 GENERATED_FILES = \
 AssemblyInfo.cs
 
-all: $(DLL) $(ADDIN_BUILD)/$(ADDIN)
+all: $(ASSEMBLY) $(ADDIN_BUILD)/$(ADDIN)
 
 ADDIN = MonoDevelop.Documentation.addin.xml
 ADDIN_BUILD = $(top_builddir)/build/AddIns
@@ -21,16 +22,16 @@ $(ADDIN_BUILD)/$(ADDIN): $(srcdir)/$(ADDIN)
 	mkdir -p $(ADDIN_BUILD)
 	cp $(srcdir)/$(ADDIN) $(ADDIN_BUILD)/.
 
-$(DLL): $(build_sources)
-	$(CSC) $(CSC_FLAGS) -out:$@ -target:library $(REFERENCES) $(build_sources)
+$(ASSEMBLY): $(build_sources)
+	$(CSC) $(CSC_FLAGS) -out:$@ -target:library $(REFS) $(build_sources)
 
 addindir = $(MD_ADDIN_DIR)
 addin_DATA = $(ADDIN)
 
 assemblydir = $(MD_ADDIN_DIR)
-assembly_DATA = $(DLL)
+assembly_DATA = $(ASSEMBLY)
 
-CLEANFILES = $(DLL) $(DLL).mdb
+CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
 
 EXTRA_DIST = $(FILES) $(ADDIN)
 
