@@ -5,15 +5,15 @@
        url         = "http://www.monodevelop.com"
        description = "Integrates the Mono documentation browser (Monodoc) into the MonoDevelop IDE"
 	   category    = "IDE extensions"
-       version     = "0.9.0">
+       version     = "0.10.0">
 
 	<Runtime>
 		<Import assembly="MonoDevelop.Documentation.dll"/>
 	</Runtime>
 
 	<Dependencies>
-		<AddIn id="MonoDevelop.Core" version="0.9.0"/>
-		<AddIn id="MonoDevelop.Projects" version="0.9.0"/>
+		<AddIn id="MonoDevelop.Core" version="0.10.0"/>
+		<AddIn id="MonoDevelop.Projects" version="0.10.0"/>
 	</Dependencies>
 
 	<Extension path = "/Workspace/Services">
